--- a/ofertasQr/gradle.properties
+++ b/ofertasQr/gradle.properties
@@ -21,3 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+kotlin.daemon.enabled=false
+org.gradle.daemon=false
+kotlin.daemon.jvmargs=-Xmx2g -XX:-UseParallelGC
+
